--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,7 +91,7 @@ Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
-limitations under the License.\n\n\n"
+limitations under the License.\n\n"
 
         "Universal-Image-Loader"
         "Copyright &#169; AD1024
@@ -335,6 +335,8 @@ limitations under the License.\n\n\n"
         1. 头像添加背景图片(主页面)
         2. 将滚动加载社团列表变为有界加载，节省流量(社团广场)
         3. Toast消息不再重叠啦~~~（诸多界面）
+        4. 增加天台页面
+        5. 自动检查更新功能(可在设置中开启或关闭)
 
         优化:
         1. 添加一个半透明的黑色背景使社团名称能够看得更清楚(社团广场)
@@ -346,5 +348,6 @@ limitations under the License.\n\n\n"
         3. 点击\"显示高质量头像图片\"卡片无效果的Bug"
     </string>
     <string name="setting_high_quality_avatar_indicator">Show High Quality Avatar</string>
+    <string name="setting_enable_auto_update_check">Check Update When StartUp</string>
 
 </resources>
